@@ -38,10 +38,6 @@ import com.amazonaws.athena.connectors.jdbc.TestBase;
 import com.amazonaws.athena.connectors.jdbc.connection.DatabaseConnectionConfig;
 import com.amazonaws.athena.connectors.jdbc.connection.JdbcConnectionFactory;
 import com.amazonaws.athena.connectors.jdbc.connection.JdbcCredentialProvider;
-import com.amazonaws.services.athena.AmazonAthena;
-import com.amazonaws.services.secretsmanager.AWSSecretsManager;
-import com.amazonaws.services.secretsmanager.model.GetSecretValueRequest;
-import com.amazonaws.services.secretsmanager.model.GetSecretValueResult;
 import org.apache.arrow.vector.types.pojo.Field;
 import org.apache.arrow.vector.types.pojo.Schema;
 import org.junit.Assert;
@@ -50,7 +46,10 @@ import org.junit.Test;
 import org.mockito.Mockito;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
-
+import software.amazon.awssdk.services.athena.AthenaClient;
+import software.amazon.awssdk.services.secretsmanager.SecretsManagerClient;
+import software.amazon.awssdk.services.secretsmanager.model.GetSecretValueRequest;
+import software.amazon.awssdk.services.secretsmanager.model.GetSecretValueResponse;
 import java.sql.Connection;
 import java.sql.PreparedStatement;
 import java.sql.ResultSet;
@@ -67,6 +66,9 @@ import java.util.Set;
 import java.util.concurrent.atomic.AtomicInteger;
 import java.util.stream.Collectors;
 
+import static org.mockito.ArgumentMatchers.any;
+import static org.mockito.ArgumentMatchers.nullable;
+
 public class SynapseMetadataHandlerTest
         extends TestBase
 {
@@ -77,8 +79,8 @@ public class SynapseMetadataHandlerTest
     private JdbcConnectionFactory jdbcConnectionFactory;
     private Connection connection;
     private FederatedIdentity federatedIdentity;
-    private AWSSecretsManager secretsManager;
-    private AmazonAthena athena;
+    private SecretsManagerClient secretsManager;
+    private AthenaClient athena;
 
     @Before
     public void setup()
@@ -88,11 +90,11 @@ public class SynapseMetadataHandlerTest
         this.jdbcConnectionFactory = Mockito.mock(JdbcConnectionFactory.class, Mockito.RETURNS_DEEP_STUBS);
         this.connection = Mockito.mock(Connection.class, Mockito.RETURNS_DEEP_STUBS);
         logger.info(" this.connection.."+ this.connection);
-        Mockito.when(this.jdbcConnectionFactory.getConnection(Mockito.any(JdbcCredentialProvider.class))).thenReturn(this.connection);
-        this.secretsManager = Mockito.mock(AWSSecretsManager.class);
-        this.athena = Mockito.mock(AmazonAthena.class);
-        Mockito.when(this.secretsManager.getSecretValue(Mockito.eq(new GetSecretValueRequest().withSecretId("testSecret")))).thenReturn(new GetSecretValueResult().withSecretString("{\"user\": \"testUser\", \"password\": \"testPassword\"}"));
-        this.synapseMetadataHandler = new SynapseMetadataHandler(databaseConnectionConfig, this.secretsManager, this.athena, this.jdbcConnectionFactory);
+        Mockito.when(this.jdbcConnectionFactory.getConnection(nullable(JdbcCredentialProvider.class))).thenReturn(this.connection);
+        this.secretsManager = Mockito.mock(SecretsManagerClient.class);
+        this.athena = Mockito.mock(AthenaClient.class);
+        Mockito.when(this.secretsManager.getSecretValue(Mockito.eq(GetSecretValueRequest.builder().secretId("testSecret").build()))).thenReturn(GetSecretValueResponse.builder().secretString("{\"user\": \"testUser\", \"password\": \"testPassword\"}").build());
+        this.synapseMetadataHandler = new SynapseMetadataHandler(databaseConnectionConfig, this.secretsManager, this.athena, this.jdbcConnectionFactory, com.google.common.collect.ImmutableMap.of());
         this.federatedIdentity = Mockito.mock(FederatedIdentity.class);
     }
 
@@ -123,7 +125,7 @@ public class SynapseMetadataHandlerTest
 
         Statement st = Mockito.mock(Statement.class);
         Mockito.when(this.connection.createStatement()).thenReturn(st);
-        Mockito.when(st.executeQuery(Mockito.anyString())).thenReturn(resultSet);
+        Mockito.when(st.executeQuery(nullable(String.class))).thenReturn(resultSet);
 
         GetTableLayoutResponse getTableLayoutResponse = this.synapseMetadataHandler.doGetTableLayout(blockAllocator, getTableLayoutRequest);
 
@@ -156,7 +158,7 @@ public class SynapseMetadataHandlerTest
 
         Statement st = Mockito.mock(Statement.class);
         Mockito.when(this.connection.createStatement()).thenReturn(st);
-        Mockito.when(st.executeQuery(Mockito.anyString())).thenReturn(resultSet);
+        Mockito.when(st.executeQuery(nullable(String.class))).thenReturn(resultSet);
 
         GetTableLayoutResponse getTableLayoutResponse = this.synapseMetadataHandler.doGetTableLayout(blockAllocator, getTableLayoutRequest);
 
@@ -188,9 +190,9 @@ public class SynapseMetadataHandlerTest
 
         Connection connection = Mockito.mock(Connection.class, Mockito.RETURNS_DEEP_STUBS);
         JdbcConnectionFactory jdbcConnectionFactory = Mockito.mock(JdbcConnectionFactory.class);
-        Mockito.when(jdbcConnectionFactory.getConnection(Mockito.any(JdbcCredentialProvider.class))).thenReturn(connection);
+        Mockito.when(jdbcConnectionFactory.getConnection(nullable(JdbcCredentialProvider.class))).thenReturn(connection);
         Mockito.when(connection.getMetaData().getSearchStringEscape()).thenThrow(new SQLException());
-        SynapseMetadataHandler synapseMetadataHandler = new SynapseMetadataHandler(databaseConnectionConfig, this.secretsManager, this.athena, jdbcConnectionFactory);
+        SynapseMetadataHandler synapseMetadataHandler = new SynapseMetadataHandler(databaseConnectionConfig, this.secretsManager, this.athena, jdbcConnectionFactory, com.google.common.collect.ImmutableMap.of());
 
         synapseMetadataHandler.doGetTableLayout(Mockito.mock(BlockAllocator.class), getTableLayoutRequest);
     }
@@ -211,7 +213,7 @@ public class SynapseMetadataHandlerTest
 
         Statement st = Mockito.mock(Statement.class);
         Mockito.when(this.connection.createStatement()).thenReturn(st);
-        Mockito.when(st.executeQuery(Mockito.anyString())).thenReturn(resultSet);
+        Mockito.when(st.executeQuery(nullable(String.class))).thenReturn(resultSet);
 
         Schema partitionSchema = this.synapseMetadataHandler.getPartitionSchema("testCatalogName");
         Set<String> partitionCols = partitionSchema.getFields().stream().map(Field::getName).collect(Collectors.toSet());
@@ -223,27 +225,30 @@ public class SynapseMetadataHandlerTest
         GetSplitsRequest getSplitsRequest = new GetSplitsRequest(this.federatedIdentity, "testQueryId", "testCatalogName", tableName, getTableLayoutResponse.getPartitions(), new ArrayList<>(partitionCols), constraints, null);
         GetSplitsResponse getSplitsResponse = this.synapseMetadataHandler.doGetSplits(splitBlockAllocator, getSplitsRequest);
 
-        Set<Map<String, String>> expectedSplits = new HashSet<>();
-        expectedSplits.add(Map.ofEntries(
-                Map.entry("PARTITION_BOUNDARY_FROM", " "),
-                Map.entry(SynapseMetadataHandler.PARTITION_NUMBER, "1"),
-                Map.entry("PARTITION_COLUMN", "id"),
-                Map.entry("PARTITION_BOUNDARY_TO", "0")));
-        expectedSplits.add(Map.ofEntries(
-                Map.entry("PARTITION_BOUNDARY_FROM", "0"),
-                Map.entry(SynapseMetadataHandler.PARTITION_NUMBER, "2"),
-                Map.entry("PARTITION_COLUMN", "id"),
-                Map.entry("PARTITION_BOUNDARY_TO", "105")));
-        expectedSplits.add(Map.ofEntries(
-                Map.entry("PARTITION_BOUNDARY_FROM", "105"),
-                Map.entry(SynapseMetadataHandler.PARTITION_NUMBER, "3"),
-                Map.entry("PARTITION_COLUMN", "id"),
-                Map.entry("PARTITION_BOUNDARY_TO", "327")));
-        expectedSplits.add(Map.ofEntries(
-                Map.entry("PARTITION_BOUNDARY_FROM", "327"),
-                Map.entry(SynapseMetadataHandler.PARTITION_NUMBER, "4"),
-                Map.entry("PARTITION_COLUMN", "id"),
-                Map.entry("PARTITION_BOUNDARY_TO", "null")));
+        // TODO: Not sure why this is a set of maps, but I'm not going to change it
+        // other than mechanically making it java 8 compatible
+        Set<Map<String, String>> expectedSplits = com.google.common.collect.ImmutableSet.of(
+            com.google.common.collect.ImmutableMap.of(
+                "PARTITION_BOUNDARY_FROM", " ",
+                SynapseMetadataHandler.PARTITION_NUMBER, "1",
+                "PARTITION_COLUMN", "id",
+                "PARTITION_BOUNDARY_TO", "0"),
+            com.google.common.collect.ImmutableMap.of(
+                "PARTITION_BOUNDARY_FROM", "0",
+                SynapseMetadataHandler.PARTITION_NUMBER, "2",
+                "PARTITION_COLUMN", "id",
+                "PARTITION_BOUNDARY_TO", "105"),
+            com.google.common.collect.ImmutableMap.of(
+                "PARTITION_BOUNDARY_FROM", "105",
+                SynapseMetadataHandler.PARTITION_NUMBER, "3",
+                "PARTITION_COLUMN", "id",
+                "PARTITION_BOUNDARY_TO", "327"),
+            com.google.common.collect.ImmutableMap.of(
+                "PARTITION_BOUNDARY_FROM", "327",
+                SynapseMetadataHandler.PARTITION_NUMBER, "4",
+                "PARTITION_COLUMN", "id",
+                "PARTITION_BOUNDARY_TO", "null")
+        );
 
         Assert.assertEquals(expectedSplits.size(), getSplitsResponse.getSplits().size());
         Set<Map<String, String>> actualSplits = getSplitsResponse.getSplits().stream().map(Split::getProperties).collect(Collectors.toSet());
@@ -263,7 +268,7 @@ public class SynapseMetadataHandlerTest
 
         Statement st = Mockito.mock(Statement.class);
         Mockito.when(this.connection.createStatement()).thenReturn(st);
-        Mockito.when(st.executeQuery(Mockito.anyString())).thenReturn(resultSet);
+        Mockito.when(st.executeQuery(nullable(String.class))).thenReturn(resultSet);
 
         Schema partitionSchema = this.synapseMetadataHandler.getPartitionSchema("testCatalogName");
         Set<String> partitionCols = partitionSchema.getFields().stream().map(Field::getName).collect(Collectors.toSet());
@@ -301,7 +306,7 @@ public class SynapseMetadataHandlerTest
 
         Statement st = Mockito.mock(Statement.class);
         Mockito.when(this.connection.createStatement()).thenReturn(st);
-        Mockito.when(st.executeQuery(Mockito.anyString())).thenReturn(resultSet);
+        Mockito.when(st.executeQuery(nullable(String.class))).thenReturn(resultSet);
 
         GetTableLayoutResponse getTableLayoutResponse = this.synapseMetadataHandler.doGetTableLayout(blockAllocator, getTableLayoutRequest);
 
@@ -309,17 +314,17 @@ public class SynapseMetadataHandlerTest
         GetSplitsRequest getSplitsRequest = new GetSplitsRequest(this.federatedIdentity, "testQueryId", "testCatalogName", tableName, getTableLayoutResponse.getPartitions(), new ArrayList<>(partitionCols), constraints, "2");
         GetSplitsResponse getSplitsResponse = this.synapseMetadataHandler.doGetSplits(splitBlockAllocator, getSplitsRequest);
 
-        Set<Map<String, String>> expectedSplits = new HashSet<>();
-        expectedSplits.add(Map.ofEntries(
-                Map.entry("PARTITION_BOUNDARY_FROM", "105"),
-                Map.entry(SynapseMetadataHandler.PARTITION_NUMBER, "3"),
-                Map.entry("PARTITION_COLUMN", "id"),
-                Map.entry("PARTITION_BOUNDARY_TO", "327")));
-        expectedSplits.add(Map.ofEntries(
-                Map.entry("PARTITION_BOUNDARY_FROM", "327"),
-                Map.entry(SynapseMetadataHandler.PARTITION_NUMBER, "4"),
-                Map.entry("PARTITION_COLUMN", "id"),
-                Map.entry("PARTITION_BOUNDARY_TO", "null")));
+        Set<Map<String, String>> expectedSplits = com.google.common.collect.ImmutableSet.of(
+            com.google.common.collect.ImmutableMap.of(
+                "PARTITION_BOUNDARY_FROM", "105",
+                SynapseMetadataHandler.PARTITION_NUMBER, "3",
+                "PARTITION_COLUMN", "id",
+                "PARTITION_BOUNDARY_TO", "327"),
+            com.google.common.collect.ImmutableMap.of(
+                "PARTITION_BOUNDARY_FROM", "327",
+                SynapseMetadataHandler.PARTITION_NUMBER, "4",
+                "PARTITION_COLUMN", "id",
+                "PARTITION_BOUNDARY_TO", "null"));
         Set<Map<String, String>> actualSplits = getSplitsResponse.getSplits().stream().map(Split::getProperties).collect(Collectors.toSet());
         Assert.assertEquals(expectedSplits, actualSplits);
     }
@@ -352,7 +357,7 @@ public class SynapseMetadataHandlerTest
         Schema expected = expectedSchemaBuilder.build();
 
         PreparedStatement stmt = Mockito.mock(PreparedStatement.class);
-        Mockito.when(connection.prepareStatement(Mockito.anyString())).thenReturn(stmt);
+        Mockito.when(connection.prepareStatement(nullable(String.class))).thenReturn(stmt);
         Mockito.when(stmt.executeQuery()).thenReturn(resultSet);
 
         Mockito.when(connection.getMetaData().getURL()).thenReturn("jdbc:sqlserver://hostname;databaseName=fakedatabase");
@@ -362,7 +367,7 @@ public class SynapseMetadataHandlerTest
         Mockito.when(connection.getMetaData().getColumns("testCatalog", inputTableName.getSchemaName(), inputTableName.getTableName(), null)).thenReturn(resultSet2);
 
         GetTableResponse getTableResponse = this.synapseMetadataHandler.doGetTable(
-                blockAllocator, new GetTableRequest(this.federatedIdentity, "testQueryId", "testCatalog", inputTableName));
+                blockAllocator, new GetTableRequest(this.federatedIdentity, "testQueryId", "testCatalog", inputTableName, Collections.emptyMap()));
         Assert.assertEquals(expected, getTableResponse.getSchema());
         Assert.assertEquals(inputTableName, getTableResponse.getTableName());
         Assert.assertEquals("testCatalog", getTableResponse.getCatalogName());
@@ -386,7 +391,7 @@ public class SynapseMetadataHandlerTest
         ResultSet resultSet2 = mockResultSet(columns, types2, values2, new AtomicInteger(-1));
 
         PreparedStatement stmt = Mockito.mock(PreparedStatement.class);
-        Mockito.when(connection.prepareStatement(Mockito.anyString())).thenReturn(stmt);
+        Mockito.when(connection.prepareStatement(nullable(String.class))).thenReturn(stmt);
         Mockito.when(stmt.executeQuery()).thenReturn(resultSet);
 
         Mockito.when(connection.getMetaData().getURL()).thenReturn("jdbc:sqlserver://hostname-ondemand;databaseName=fakedatabase");
@@ -396,7 +401,7 @@ public class SynapseMetadataHandlerTest
         Mockito.when(connection.getMetaData().getColumns("testCatalog", inputTableName.getSchemaName(), inputTableName.getTableName(), null)).thenReturn(resultSet2);
 
         GetTableResponse getTableResponse = this.synapseMetadataHandler.doGetTable(
-                blockAllocator, new GetTableRequest(this.federatedIdentity, "testQueryId", "testCatalog", inputTableName));
+                blockAllocator, new GetTableRequest(this.federatedIdentity, "testQueryId", "testCatalog", inputTableName, Collections.emptyMap()));
         Assert.assertEquals(inputTableName, getTableResponse.getTableName());
         Assert.assertEquals("testCatalog", getTableResponse.getCatalogName());
     }
